# simulateFSC

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: customization.md  getting_started.md  parameters.md
examples/: lbg_movie.py  lbg_run.py
limitedbg/: __init__.py  models.py  simulator.py
tests/: test_regression.py  test_smoke.py
