[project]
name = "simulatefsc"
version = "0.1.0"
description = "Food supply chain simulation with perishable product support, based on the Beer Game"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Hajime Mizuyama" }
]
dependencies = [
    "numpy>=2.3.5",
    "pygame>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["limitedbg"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
